# VeloDesk

./: .gitignore  BUILD_SETUP.md  DEPLOY.md  README.md  render.yaml
capture-motor/: main.py  requirements.txt  velodesk-host.spec
capture-motor-native/: Cargo.toml
capture-motor-native/src/: main.rs
client-ui/: index.html  main.electron.cjs  main.electron.js  main.js  package-lock.json  package.json  preload.cjs  preload.js  viewer.html  viewer.js
signaling-server/: package-lock.json  package.json  server.js
